Fixed projectSection gap

--- a/src/components/ProjectSection/projectSection.scss
+++ b/src/components/ProjectSection/projectSection.scss
@@ -30,6 +30,7 @@
         margin-right: 4%;
 
         .card {
+            padding-top: 5px;
             border-radius: 8px;
             overflow: hidden;
             background-color: #282828;
@@ -111,6 +112,7 @@
         }
 
         .carousel {
+            padding-top: 3%;
             margin-top: 10%;
             margin-left: 6%;
             margin-right: 6%;
